# STIM_Version1

./: .gitignore  generate_airline_topological_synthetic.py  spatial_im_airline_repo.rar
spatial_im_airline_repo/: README.md  pyproject.toml  requirements.txt
spatial_im_airline_repo/artifacts/paper_light/: compute_time_summary.json  light_model_data_summary.txt
spatial_im_airline_repo/artifacts/paper_minimal/: compute_time_summary.json  model_io_results_detailed_summary.txt
spatial_im_airline_repo/configs/: airline_pretrain_reusable.yaml  airline_synth.yaml  airline_transfer_homogeneous.yaml
spatial_im_airline_repo/configs/generated_transfer/: transfer_target300_budget10.yaml  transfer_target300_budget15.yaml  transfer_target300_budget5.yaml  transfer_target500_budget10.yaml  transfer_target500_budget15.yaml  transfer_target500_budget5.yaml
spatial_im_airline_repo/configs/generated_transfer_topological/: transfer_target300_budget10.yaml  transfer_target300_budget15.yaml  (+4 more)
spatial_im_airline_repo/scripts/: adapt_reuse_policy.py  build_transfer_configs.py  compare_regimes_learned_env.py  compare_regimes_raw_pipeline.py  eta_monitor_hourly.sh  evaluate.py  evaluate_transfer_homogeneous.py  generate_airline_topological_synthetic.py  generate_homogeneous_family_csv.py  pretrain_reusable_policy.py  quickstart.py  rerank_optuna_top_trials.py  reuse_across_snapshots.py  reuse_from_sampled_subgraphs.py  reuse_policy_zero_shot.py  run_baselines.py  run_experiment_ladder.py  run_protocol_tmux.sh  train_diffusor.py  train_rl.py  tune_ladder_optuna.py  tune_optuna.py
(+72 files in other folders)
