[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-im-airline"
version = "0.1.0"
description = "Prototype code for spatial-temporal influence maximization on airline networks"
requires-python = ">=3.10"

dependencies = [
  "torch",
  "numpy",
  "pandas",
  "networkx",
  "pyyaml",
  "matplotlib",
  "optuna",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
